--- a/web/public/css/styles.css
+++ b/web/public/css/styles.css
@@ -2,6 +2,11 @@ body {
     font-size: .875rem;
 }
 
+@font-face {
+  font-family: 'The name of the Font Family Here';
+  src: url('../fonts/Caveat-Bold.ttf') format('truetype');
+}
+
 .feather {
     width: 16px;
     height: 16px;
@@ -118,4 +123,8 @@ body {
     .bd-placeholder-img-lg {
         font-size: 3.5rem;
     }
+}
+html, body {
+    height: 100%;
+    margin: 0px;
 }
