Implement design for list messages.

--- a/web/public/css/styles.css
+++ b/web/public/css/styles.css
@@ -129,3 +129,46 @@ html, body {
     height: 100%;
     margin: 0px;
 }
+
+.btn-circle.btn-xl {
+    width: 70px;
+    height: 70px;
+    padding: 10px 16px;
+    border-radius: 35px;
+    font-size: 24px;
+    line-height: 1.33;
+}
+
+.btn-circle {
+    width: 30px;
+    height: 30px;
+    padding: 6px 0px;
+    border-radius: 15px;
+    text-align: center;
+    font-size: 12px;
+    line-height: 1.42857;
+}
+
+.visitor-name {
+    font-family: Caveat;
+    font-size: 26px;
+}
+
+.custom-pagination li a {
+    background: transparent;
+    border: none;
+    color: #fff;
+}
+
+.custom-pagination .page-item.active .page-link {
+    background: #dc3545;
+    border: none;
+    color: #fff;
+    border-radius: 15px;
+}
+
+.custom-pagination li a:hover {
+    border-radius: 15px !important;
+    background-color: #dc3545;
+    color: #fff;
+}
