update README, font for text and clearn code.

--- a/web/public/css/styles.css
+++ b/web/public/css/styles.css
@@ -1,9 +1,10 @@
 body {
     font-size: .875rem;
+    font-family: 'IBM Plex Sans';
 }
 
 @font-face {
-  font-family: 'The name of the Font Family Here';
+  font-family: 'Caveat-Bold';
   src: url('../fonts/Caveat-Bold.ttf') format('truetype');
 }
 
